# HDILib

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  HDILibConfig.cmake.in  README.md  appveyor.yml  build.py  conanfile.py  conanfile.txt  hdilibdirs.txt  vcpkg.json
.ci/: conan_dependencies.sh  fix_cmake.bat  install.sh  make_profile.bat  pemsetup.sh  set_appveyor_conan_reference.ps1  set_travis_conan_reference.sh
.github/conan_linuxmac_build/: action.yml
.github/conan_windows_build/: action.yml
.github/workflows/: build.yml
CMake/: FLANN.cmake  Incredibuild.cmake
cmake/: CAnalysisBuild.cmake  CMakeSetOptimizationAndAVX.cmake  CTestConfig.cmake  ConanInstall.cmake  ConanSetup.cmake  ConfigVersion.cmake.in  install_profile.in  install_profile_nowin.in
hdi/: .editorconfig
hdi/data/: CMakeLists.txt  abstract_panel_data.h  embedding.cpp  embedding.h  embedding_inl.h  io.h  map_helpers.h  map_mem_eff.h  panel_data.h  panel_data_inl.h  pixel_data.h  set_intersection_tree.h  voxel_data.h
hdi/dimensionality_reduction/: CMakeLists.txt  dr_config.h.in  embedding_equalizer.h  embedding_equalizer_inl.h  evaluation.h  gradient_descent_tsne_texture.cpp  gradient_descent_tsne_texture.h  gradient_descent_tsne_texture_inl.h  hd_joint_probability_generator.cpp  hd_joint_probability_generator.h  hd_joint_probability_generator_inl.h  hierarchical_sne.cpp  hierarchical_sne.h  hierarchical_sne_inl.h  knn_support.cpp  knn_support.h  knn_utils.cpp  knn_utils.h  sparse_tsne_user_def_probabilities.cpp  sparse_tsne_user_def_probabilities.h  sparse_tsne_user_def_probabilities_inl.h  sptree.h  sptree_inl.h  tsne.h  tsne_inl.h  tsne_parameters.h  tsne_random_walks.h  tsne_random_walks_inl.h  weighted_sptree.h  weighted_sptree_inl.h  wtsne.cpp  wtsne.h  wtsne_inl.h
hdi/dimensionality_reduction/gpgpu_sne/: compute_shaders.glsl  field_computation.cpp  field_computation.h  gpgpu_sne_compute.cpp  gpgpu_sne_compute.h  gpgpu_sne_raster.cpp  gpgpu_sne_raster.h
hdi/dimensionality_reduction/gpgpu_vulkan/: CMakeLists.txt  gpgpu_sne_comp_vulkan.cpp  gpgpu_sne_comp_vulkan.h  tensor_config.h
hdi/dimensionality_reduction/gpgpu_vulkan/shaders/: CMakeLists.txt  bounds.comp  center_scale.comp  compute_fields.comp  compute_forces.comp  interp_fields.comp  shader_defines.glsl.in  shader_progs.cpp  shader_progs.h  shaders.cpp  shaders.h  stencil.comp  update.comp  vkUniformBufferHelper.h  vulkan_extension.cpp  vulkan_extension.h
hdi/dimensionality_reduction/gpgpu_vulkan/shaders/config/: shader_defines.glsl
hdi/utils/: CMakeLists.txt  dataset_utils.cpp  dataset_utils.h  glad.cpp  graph_algorithms.cpp  graph_algorithms.h  graph_algorithms_inl.h  knn_utils.cpp  knn_utils.h  log_helper_functions.h  log_progress.cpp  log_progress.h  math_utils.h  math_utils_inl.h  vector_utils.h
test_package/: CMakeLists.txt  conanfile.py  example.cpp
tests/: CMakeLists.txt
tests/tSNE_test/: CMakeLists.txt  tSNETester.cpp
tools/: add_remote.bat  add_remote.sh
vcpkg-overlays/kompute/: add_indirect_buffer_flag_to_tensor.patch  get_algorithm_descriptor_set.patch  get_manager_devices.patch  make_constructor_buffer_info_public.patch  permit_descriptor_type_update.patch  portfile.cmake  ubo_support.patch  usage  vcpkg.json
